✨이벤트 submit변경으로 enter검색 기능 추가

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>최고 평점 영화 콜렉션</h1>
     <div>미구현</div>
   </header>
-  <form class="search">
+  <form class="search" id="search-form">
     <label></label>
     <input type="text" id="search-input" placeholder="영화 제목을 검색해 보세요">
     <button type="submit" id="search-btn">검색</button>
