--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>내배캠 최고 평점 영화 콜렉션</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet" />
 
@@ -27,6 +27,6 @@
   </div>
 </body>
 
-<script type="module" src="index.js"></script>
+<script type="module" src="./js/index.js"></script>
 
 </html>
