--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <script src="https://kit.fontawesome.com/72fc008e44.js" crossorigin="anonymous"></script>
   <title>내배캠 최고 평점 영화 콜렉션</title>
 
 </head>
@@ -23,23 +24,96 @@
     <button type="submit" id="search-btn">검색</button>
   </form>
   <!-- Swiper -->
-
   <div #swiperRef="" class="swiper mySwiper">
     <div class="swiper-wrapper">
-      <div class="swiper-slide">Slide 1</div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
-      <div class="swiper-slide">Slide 4</div>
+      <div class="swiper-slide">
+        <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
     </div>
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div>
   </div>
-
+  <div class="divider"></div>
+  <!-- Swiper -->
+  <div #swiperRef="" class="swiper subSwiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <img class="sub" src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img class="sub" src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img class="sub" src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img class="sub" src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img class="sub" src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img class="sub" src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img class="sub" src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img class="sub" src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img class="sub" src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img class="sub" src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img class="sub" src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+      <div class="swiper-slide">
+        <img class="sub" src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"/>
+      </div>
+    </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+  </div>
   <section class="card-list">
   </section>
   <div id="up-btn">
-    <button class="up-btn">⬆️</button>
+    <button class="up-btn"><i class="fa-solid fa-arrow-up fa-2x"></i></button>
   </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
