--- a/src/html/sub.html
+++ b/src/html/sub.html
@@ -6,28 +6,27 @@
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="../css/sub.css" />
+    <script src="../js/constants/movieConstants.js"></script>
+    <script src="../js/utils/fetchUtils.js"></script>
+    <script src="../js/feature/sub.js"></script>
     <title>상세페이지</title>
   </head>
 
   <body>
     <main class="sub_page">
       <!-- 영화 상세 정보 -->
-      <div class="movie_info">
+      <div class="movie_info" style="display: flex">
         <div class="text_wrap">
-          <h2 class="title">파묘</h2>
+          <h2 class="title" id="title">
+            <!-- 영화 제목 -->
+          </h2>
 
-          <ul class="info_list">
-            <li>15</li>
-            <li>평균 3.5</li>
-            <li>2024</li>
-            <li>2시간 13분</li>
-            <li>미스터리</li>
-            <li>오컬트</li>
+          <ul class="info_list" , id="info_list">
+            <!--  영화정보-->
           </ul>
 
-          <p class="desc">
-            기이한 병이 대물림되는 집안의 장손에게 거액의 의뢰를 받은 무당 화림과 봉길. 조상의 묫자리가 화근임을 알아챈
-            두 사람은 풍수사 상덕과 장의사 영근에게 도움을 청하지만, 상덕은 불길한 기운을 감지한다.
+          <p class="desc" id="desc">
+            <!--  영화줄거리-->
           </p>
 
           <div class="btn_box">
@@ -37,6 +36,9 @@
               <button class="btn_pink" type="button">선물하기</button>
             </div>
           </div>
+        </div>
+        <div class="movie_image_form">
+          <img id="movie_image" />
         </div>
       </div>
 
@@ -59,52 +61,8 @@
         <div class="cont_info">
           <div class="cont_item">
             <h3 class="title">관련 동영상</h3>
-            <ul class="video_list">
-              <li>
-                <a
-                  href="https://redirect.watcha.com/mars/aHR0cHM6Ly93d3cueW91dHViZS5jb20vd2F0Y2g_dj1BcjJDbjNFZzdRVQ"
-                  target="_blank"
-                  title="천만돌파 축하 영상"
-                >
-                  <img class="img" src="https://img.youtube.com/vi/Ar2Cn3Eg7QU/0.jpg" />
-                </a>
-              </li>
-              <li>
-                <a
-                  href="https://redirect.watcha.com/mars/aHR0cHM6Ly93d3cueW91dHViZS5jb20vd2F0Y2g_dj1BcjJDbjNFZzdRVQ"
-                  target="_blank"
-                  title="천만돌파 축하 영상"
-                >
-                  <img class="img" src="https://img.youtube.com/vi/Ar2Cn3Eg7QU/0.jpg" />
-                </a>
-              </li>
-              <li>
-                <a
-                  href="https://redirect.watcha.com/mars/aHR0cHM6Ly93d3cueW91dHViZS5jb20vd2F0Y2g_dj1BcjJDbjNFZzdRVQ"
-                  target="_blank"
-                  title="천만돌파 축하 영상"
-                >
-                  <img class="img" src="https://img.youtube.com/vi/Ar2Cn3Eg7QU/0.jpg" />
-                </a>
-              </li>
-              <li>
-                <a
-                  href="https://redirect.watcha.com/mars/aHR0cHM6Ly93d3cueW91dHViZS5jb20vd2F0Y2g_dj1BcjJDbjNFZzdRVQ"
-                  target="_blank"
-                  title="천만돌파 축하 영상"
-                >
-                  <img class="img" src="https://img.youtube.com/vi/Ar2Cn3Eg7QU/0.jpg" />
-                </a>
-              </li>
-              <li>
-                <a
-                  href="https://redirect.watcha.com/mars/aHR0cHM6Ly93d3cueW91dHViZS5jb20vd2F0Y2g_dj1BcjJDbjNFZzdRVQ"
-                  target="_blank"
-                  title="천만돌파 축하 영상"
-                >
-                  <img class="img" src="https://img.youtube.com/vi/Ar2Cn3Eg7QU/0.jpg" />
-                </a>
-              </li>
+            <ul class="video_list" id="video_list">
+              <!-- 관련 동영상 -->
             </ul>
           </div>
 
@@ -113,87 +71,47 @@
               <h3 class="title">감독/출연</h3>
               <!-- <a href="" class="btn_more">더보기</a> -->
             </div>
-            <ul class="char_list">
-              <li>
-                <img
-                  class="img"
-                  src="https://an2-img.amz.wtchn.net/image/v2/Mw1fbLICWZvZ8mcHzDyl2Q.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk1qUXdlREkwTUNKZExDSndJam9pTDNZeEwzQmxiM0JzWlM4M09UWXlPREE0WkdGbE1ESm1PV1ZsWlRjeU5pNXFjR2NpZlEuUWpnRWJvZ0V6bFU1eFR1cG9kWVJkV1psUWh6dVpjbXFIVUVyUzZlVDBuaw"
-                  alt=""
-                />
-                <div class="txt_area">
-                  <strong>장재현</strong>
-                  <p>감독</p>
-                </div>
-              </li>
-              <li>
-                <img
-                  class="img"
-                  src="https://an2-img.amz.wtchn.net/image/v2/Mw1fbLICWZvZ8mcHzDyl2Q.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk1qUXdlREkwTUNKZExDSndJam9pTDNZeEwzQmxiM0JzWlM4M09UWXlPREE0WkdGbE1ESm1PV1ZsWlRjeU5pNXFjR2NpZlEuUWpnRWJvZ0V6bFU1eFR1cG9kWVJkV1psUWh6dVpjbXFIVUVyUzZlVDBuaw"
-                  alt=""
-                />
-                <div class="txt_area">
-                  <strong>최민식</strong>
-                  <p>주연&middot;상덕</p>
-                </div>
-              </li>
-              <li>
-                <img
-                  class="img"
-                  src="https://an2-img.amz.wtchn.net/image/v2/Mw1fbLICWZvZ8mcHzDyl2Q.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk1qUXdlREkwTUNKZExDSndJam9pTDNZeEwzQmxiM0JzWlM4M09UWXlPREE0WkdGbE1ESm1PV1ZsWlRjeU5pNXFjR2NpZlEuUWpnRWJvZ0V6bFU1eFR1cG9kWVJkV1psUWh6dVpjbXFIVUVyUzZlVDBuaw"
-                  alt=""
-                />
-                <div class="txt_area">
-                  <strong>김고은</strong>
-                  <p>주연&middot;화림</p>
-                </div>
-              </li>
+            <ul class="char_list" id="char_list">
+              <!--              등장인물-->
             </ul>
           </div>
           <div class="cont_item">
-            <h3 class="title">사용자 평</h3>
-            <ul class="review_list">
-              <li>
-                <img
-                  class="img"
-                  src="https://an2-img.amz.wtchn.net/image/v2/0DgIRXohW4KHc1bHcAiy6A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk1UQXdlREV3TUNKZExDSndJam9pTDNZeUwzTjBiM0psTDNWelpYSXZaR1ZtWVhWc2RGOXdjbTltYVd4bFgybHRZV2RsTDNCeWIyWnBiR1ZmTURjdWNHNW5JbjAucGdXeHhOa0xlSG04TVI5S2dCZXh3Q1pKOHZOMjR3elc1ZnZCTjVzMGd3VQ"
-                  alt=""
-                />
-                <div class="txt_area">
-                  <strong>미남</strong>
-                  <span>⭐</span>
-                  <p>김고은 연기 스펙트럼 어디까지 갈까 무당연기 너무 간지난다</p>
-                </div>
-              </li>
-              <li>
-                <img
-                  class="img"
-                  src="https://an2-img.amz.wtchn.net/image/v2/0DgIRXohW4KHc1bHcAiy6A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk1UQXdlREV3TUNKZExDSndJam9pTDNZeUwzTjBiM0psTDNWelpYSXZaR1ZtWVhWc2RGOXdjbTltYVd4bFgybHRZV2RsTDNCeWIyWnBiR1ZmTURjdWNHNW5JbjAucGdXeHhOa0xlSG04TVI5S2dCZXh3Q1pKOHZOMjR3elc1ZnZCTjVzMGd3VQ"
-                  alt=""
-                />
-                <div class="txt_area">
-                  <strong>미남</strong>
-                  <span>⭐</span>
-                  <p>김고은 연기 스펙트럼 어디까지 갈까 무당연기 너무 간지난다</p>
-                </div>
-              </li>
-              <li>
-                <img
-                  class="img"
-                  src="https://an2-img.amz.wtchn.net/image/v2/0DgIRXohW4KHc1bHcAiy6A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk1UQXdlREV3TUNKZExDSndJam9pTDNZeUwzTjBiM0psTDNWelpYSXZaR1ZtWVhWc2RGOXdjbTltYVd4bFgybHRZV2RsTDNCeWIyWnBiR1ZmTURjdWNHNW5JbjAucGdXeHhOa0xlSG04TVI5S2dCZXh3Q1pKOHZOMjR3elc1ZnZCTjVzMGd3VQ"
-                  alt=""
-                />
-                <div class="txt_area">
-                  <strong>미남</strong>
-                  <span>⭐</span>
-                  <p>김고은 연기 스펙트럼 어디까지 갈까 무당연기 너무 간지난다</p>
-                </div>
-              </li>
-            </ul>
+            <h3 class="review-title">사용자 평</h3>
+            <button id="reviewBtn" class="review_btn">리뷰 작성</button>
+            <div id="reviewModalContainer" class="black-bg">
+              <div id="reviewModal" class="white-bg">
+                <h2 id="reviewTitle">사용자평</h2>
+                <form id="reviewForm">
+                  <label for="author">작성자명:</label>
+                  <input type="text" id="author" name="name" required />
+                  <label for="content">내용:</label>
+                  <textarea
+                    id="content"
+                    name="content"
+                    placeholder="이 작품에 대한 생각을 자유롭게 표현해주세요."
+                    maxlength="500"
+                    required
+                  ></textarea>
+                  <label for="password">비밀번호:</label>
+                  <input type="password" id="password" name="password" required />
+
+                  <input type="submit" value="저장" id="saveBtn" />
+                  <input type="button" value="취소" id="cancelBtn" />
+                </form>
+              </div>
+            </div>
+            <section>
+              <div id="reviewContainer">
+                <p class="review-author"></p>
+                <p></p>
+              </div>
+            </section>
           </div>
         </div>
       </div>
     </main>
 
-    <script type="module" src="../js/index.js"></script>
+    <script type="module" src="../js/feature/review.modal.js"></script>
+    <script type="module" src="../js/feature/review.js"></script>
   </body>
 </html>
