--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+    <a href="../src/html/sub.html?movieId=215">임시 상세페이지 이동</a>
     <header>
       <h1>최고 평점 영화 콜렉션</h1>
     </header>
@@ -162,6 +163,8 @@
     </main>
 
     <!-- 스크립트 -->
+    <script src="./js/constants/movieConstants.js"></script>
+    <script src="./js/utils/fetchUtils.js"></script>
     <script src="https://kit.fontawesome.com/72fc008e44.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="./js/index.js"></script>
