Feat: 리뷰기능 css작업 완료

--- a/src/html/sub.html
+++ b/src/html/sub.html
@@ -128,17 +128,17 @@
             </li>
           </ul>
         </div>
-        <div class="cont_item">
+        <div class="cont_item review_title_cont">
           <h3 class="review-title">사용자 평</h3>
           <button id="reviewBtn" class="review_btn">리뷰 작성</button>
           <div id="reviewModalContainer" class="black-bg">
             <div id="reviewModal" class="white-bg">
-              <h2 id="reviewTitle">사용자평</h2>
+              <h2 id="reviewTitle">리뷰 작성</h2>
               <form id="reviewForm">
                 <label for="author">작성자명:</label>
                 <input type="text" id="author" name="name" required>
                 <label for="content">내용:</label>
-                <textarea id="content" name="content" placeholder="이 작품에 대한 생각을 자유롭게 표현해주세요." maxlength="500"
+                <textarea id="content" name="content" placeholder="이 작품에 대한 생각을 자유롭게 표현해주세요." maxlength="60"
                   required></textarea>
                 <label for="password">비밀번호:</label>
                 <input type="password" id="password" name="password" required>
