--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="./css/style.css">
   <title>내배캠 최고 평점 영화 콜렉션</title>
 
 </head>
@@ -15,34 +18,41 @@
 <body>
   <header>
     <h1>최고 평점 영화 콜렉션</h1>
-    <div></div>
   </header>
-  <form class="search" id="search-form">
-    <label></label>
-    <input type="text" id="search-input" placeholder="영화 제목을 검색해 보세요">
-    <button type="submit" id="search-btn">검색</button>
-  </form>
-  <!-- Swiper -->
 
-  <div #swiperRef="" class="swiper mySwiper">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide">Slide 1</div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
-      <div class="swiper-slide">Slide 4</div>
+  <main>
+    <!-- Swiper -->
+    <div #swiperRef="" class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">Slide 1</div>
+        <div class="swiper-slide">Slide 2</div>
+        <div class="swiper-slide">Slide 3</div>
+        <div class="swiper-slide">Slide 4</div>
+      </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-pagination"></div>
     </div>
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div>
-  </div>
 
-  <section class="card-list">
-  </section>
-  <div id="up-btn">
-    <button class="up-btn">⬆️</button>
-  </div>
+    <div class="search-container">
+      <form class="search" id="search-form">
+        <label></label>
+        <!-- 디자인 변경, cdn 확인 -->
+        <input type="text" id="search-input" placeholder="영화 제목을 검색해 보세요">
+        <button type="submit" class="material-icons" id="search-btn">search</button>
+        <button type="button" class="material-symbols-outlined" id="reset-btn">cancel</button>
+      </form>
+
+      <section class="card-list"></section>
+    </div>
+    <div id="up-btn">
+      <button class="up-btn">⬆️</button>
+    </div>
+  </main>
+
+  <!-- 스크립트 -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script type="module" src="./js/index.js"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script type="module" src="./js/index.js"></script>
 
 </html>
