--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>내배캠 최고 평점 영화 콜렉션</title>
   </head>
 
   <body>
     <header>
       <h1>최고 평점 영화 콜렉션</h1>
-      <div></div>
     </header>
 
     <main>
@@ -145,24 +149,21 @@
         <form class="search" id="search-form">
           <label></label>
           <!-- 디자인 변경, cdn 확인 -->
-          <input type="text" id="search-input" placeholder="영화 제목을 검색해 보세요">
+          <input type="text" id="search-input" placeholder="영화 제목을 검색해 보세요" />
           <button type="submit" class="material-icons" id="search-btn">search</button>
           <button type="button" class="material-symbols-outlined" id="reset-btn">cancel</button>
         </form>
 
         <section class="card-list"></section>
       </div>
-
       <div id="up-btn">
         <button class="up-btn"><i class="fa-solid fa-arrow-up fa-2x"></i></button>
       </div>
     </main>
-  </body>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script type="module" src="./js/index.js"></script>
-</html>
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <script src="https://kit.fontawesome.com/72fc008e44.js" crossorigin="anonymous"></script>
+    <!-- 스크립트 -->
+    <script src="https://kit.fontawesome.com/72fc008e44.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script type="module" src="./js/index.js"></script>
+  </body>
+</html>
