Feat: 상세페이지 이동 - 헤더 css 분리

--- a/src/html/sub.html
+++ b/src/html/sub.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="../css/layout.css" />
     <link rel="stylesheet" href="../css/sub.css" />
     <script src="../js/constants/movieConstants.js"></script>
     <script src="../js/utils/fetchUtils.js"></script>
@@ -13,6 +14,12 @@
   </head>
 
   <body>
+    <a href="/">
+      <header>
+        <h1>최고 평점 영화 콜렉션</h1>
+      </header>
+    </a>
+
     <main class="sub_page">
       <!-- 영화 상세 정보 -->
       <div class="movie_info" style="display: flex">
