--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./css/layout.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>내배캠 최고 평점 영화 콜렉션</title>
   </head>
 
   <body>
-    <a href="../src/html/sub.html?movieId=215">임시 상세페이지 이동</a>
     <header>
       <h1>최고 평점 영화 콜렉션</h1>
     </header>
