--- a/src/html/sub.html
+++ b/src/html/sub.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <a href="/">
+    <a href="/src/index.html">
       <header>
         <h1>최고 평점 영화 콜렉션</h1>
       </header>
