Fix: 메인페이지 카테고리별 영화 목록조회 완료(css, js, html 수정)

--- a/src/index.html
+++ b/src/index.html
@@ -22,140 +22,16 @@
     </header>
 
     <main>
-      <!-- Swiper -->
-      <div #swiperRef="" class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg" />
-          </div>
-          <div class="swiper-slide">
-            <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg" />
-          </div>
-          <div class="swiper-slide">
-            <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg" />
-          </div>
-          <div class="swiper-slide">
-            <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg" />
-          </div>
-          <div class="swiper-slide">
-            <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg" />
-          </div>
-          <div class="swiper-slide">
-            <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg" />
-          </div>
-          <div class="swiper-slide">
-            <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg" />
-          </div>
-          <div class="swiper-slide">
-            <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg" />
-          </div>
-          <div class="swiper-slide">
-            <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg" />
-          </div>
-          <div class="swiper-slide">
-            <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg" />
-          </div>
-          <div class="swiper-slide">
-            <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg" />
-          </div>
-          <div class="swiper-slide">
-            <img src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg" />
-          </div>
+      <div class="movie-container">
+        <div class="search-container">
+          <form class="search" id="search-form">
+            <label></label>
+            <!-- 디자인 변경, cdn 확인 -->
+            <input type="text" id="search-input" placeholder="영화 제목을 검색해 보세요" />
+            <button type="submit" class="material-icons" id="search-btn">search</button>
+            <button type="button" class="material-symbols-outlined" id="reset-btn">cancel</button>
+          </form>
         </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-      </div>
-      <div class="divider"></div>
-      <!-- Swiper -->
-      <div #swiperRef="" class="swiper subSwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <img
-              class="sub"
-              src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              class="sub"
-              src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              class="sub"
-              src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              class="sub"
-              src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              class="sub"
-              src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              class="sub"
-              src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              class="sub"
-              src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              class="sub"
-              src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              class="sub"
-              src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              class="sub"
-              src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              class="sub"
-              src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              class="sub"
-              src="https://media.themoviedb.org/t/p/w710_and_h400_multi_faces/fypydCipcWDKDTTCoPucBsdGYXW.jpg"
-            />
-          </div>
-        </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-      </div>
-
-      <div class="search-container">
-        <form class="search" id="search-form">
-          <label></label>
-          <!-- 디자인 변경, cdn 확인 -->
-          <input type="text" id="search-input" placeholder="영화 제목을 검색해 보세요" />
-          <button type="submit" class="material-icons" id="search-btn">search</button>
-          <button type="button" class="material-symbols-outlined" id="reset-btn">cancel</button>
-        </form>
-
-        <section class="card-list"></section>
       </div>
       <div id="up-btn">
         <button class="up-btn"><i class="fa-solid fa-arrow-up fa-2x"></i></button>
