Design: 리뷰 수정,삭제버튼 모달창으로 디자인 변경

--- a/src/html/sub.html
+++ b/src/html/sub.html
@@ -6,25 +6,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../css/sub.css" />
+  <link rel="stylesheet" href="../css/swal.css">
   <title>상세페이지</title>
 </head>
 
 <body>
-    <a href="/">
-      <header>
-        <h1>최고 평점 영화 콜렉션</h1>
-      </header>
-    </a>
+  <a href="/">
+    <header>
+      <h1>최고 평점 영화 콜렉션</h1>
+    </header>
+  </a>
 
-    <main class="sub_page">
-      <!-- 영화 상세 정보 -->
-      <div class="movie_info" style="display: flex">
-        <div class="text_wrap">
-          <h2 class="title" id="title">
-            <!-- 영화 제목 -->
-          </h2>
+  <main class="sub_page">
+    <!-- 영화 상세 정보 -->
+    <div class="movie_info" style="display: flex">
+      <div class="text_wrap">
+        <h2 class="title" id="title">
+          <!-- 영화 제목 -->
+        </h2>
 
         <ul class="info_list" , id="info_list">
           <!--  영화정보-->
@@ -92,7 +94,8 @@
                 <textarea id="content" name="content" placeholder="이 작품에 대한 생각을 자유롭게 표현해주세요." maxlength="60"
                   required></textarea>
                 <label for="password">비밀번호:</label>
-                <input type="password" id="password" name="password" required />
+                <input type="password" id="password" name="password" placeholder="패스워드는 4자 이상, 10자 이하이어야 합니다."
+                  required />
 
                 <input type="submit" value="저장" id="saveBtn" />
                 <input type="button" value="취소" id="cancelBtn" />
@@ -113,6 +116,7 @@
   <script src="../js/constants/movieConstants.js"></script>
   <script src="../js/utils/fetchUtils.js"></script>
   <script src="../js/feature/sub.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
   <script type="module" src="../js/index.js"></script>
   <script type="module" src="../js/feature/review.modal.js"></script>
   <script type="module" src="../js/feature/review.js"></script>
