--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,11 @@
 
   <body>
     <header>
-      <h1>최고 평점 영화 콜렉션</h1>
+      <h1>
+        <a href="/src/index.html">
+        <img src="./asset/logo.png" alt="탈주없조">
+      </a>
+      </h1>
     </header>
 
     <main>
