Design: footer추가 및 메인로고css작업

--- a/src/html/sub.html
+++ b/src/html/sub.html
@@ -14,11 +14,13 @@
 
 
 <body>
-  <a href="/src/index.html">
-    <header>
-      <h1>최고 평점 영화 콜렉션</h1>
-    </header>
-  </a>
+  <header>
+    <h1>
+      <a href="/src/index.html">
+        <img src="../asset/logo.png" alt="탈주없조">
+      </a>
+    </h1>
+  </header>
 
 
   <main class="sub_page">
@@ -92,6 +94,26 @@
       </div>
     </div>
   </main>
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-info-box">
+        <img class="footer-logo" src="../asset/logo.png" alt="푸터 로고" />
+        <ul class="team-list">
+          <li>백현명</li>
+          <li>윤희수</li>
+          <li>전인화</li>
+          <li>남현재</li>
+        </ul>
+        <p>Copyright © 탈주없조 All Rights Reserved.</p>
+      </div>
+      <div class="footer-links">
+        <a href="https://github.com/NHJeans/JS-basic">
+          <img src="../asset/github.png" alt="GitHub">
+        </a>
+      </div>
+    </div>
+  </footer>
+
 
   <script src="../js/constants/movieConstants.js"></script>
   <script src="../js/utils/fetchUtils.js"></script>
