Fix: 메인,서브페이지 링크 경로 및 이미지 경로 오류 수정

--- a/src/html/sub.html
+++ b/src/html/sub.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <h1>
-      <a href="/src/index.html">
+      <a href="../index.html">
         <img src="../asset/logo.png" alt="탈주없조">
       </a>
     </h1>
