--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 <body>
   <header>
     <h1>
-      <a href="/src/index.html">
+      <a href="./index.html">
         <img src="./asset/logo.png" alt="탈주없조">
       </a>
     </h1>
@@ -51,7 +51,7 @@
   <footer class="footer">
     <div class="footer-content">
       <div class="footer-info-box">
-        <img class="footer-logo" src="../src/asset/logo.png" alt="푸터 로고" />
+        <img class="footer-logo" src="./asset/logo.png" alt="푸터 로고" />
         <ul class="team-list">
           <li>백현명</li>
           <li>윤희수</li>
@@ -62,7 +62,7 @@
       </div>
       <div class="footer-links">
         <a href="https://github.com/NHJeans/JS-basic">
-          <img src="../src/asset/github.png" alt="GitHub">
+          <img src="./asset/github.png" alt="GitHub">
         </a>
       </div>
     </div>
