--- a/src/html/sub.html
+++ b/src/html/sub.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet" />
+  <link rel="icon" type="image/png" sizes="16x16" href='../asset/logo.png'>
   <link rel="stylesheet" href="../css/sub.css" />
   <link rel="stylesheet" href="../css/swal.css">
   <title>상세페이지</title>
