--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700;900&family=Poppins:wght@700&display=swap"
     rel="stylesheet" />
-  <link rel="icon" type="image/png" sizes="16x16" href='../src/asset/logo.png'>
+  <link rel="icon" type="image/png" sizes="16x16" href='./asset/logo.png'>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/layout.css" />
   <link rel="stylesheet" href="./css/style.css" />
